# CRL2

./: .gitignore  README.md  biome.json  components.json  index.html  jsrepo.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: copilot-instructions.md
src/: App.svelte  app.css  app.d.ts  hooks.server.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: default.rs
src-tauri/src/llama/: chat.rs  chat_state.rs  cross_encoder.rs  embed.rs  llm.rs  mod.rs  sampler_config.rs
src-tauri/src/lmstudio/: mod.rs
src-tauri/src/stablediffusion/: mod.rs
src/components/chat/: block-container.svelte  bubble.svelte  interaction-box-menu.svelte  interaction-box.svelte  typing-indicator.svelte
src/components/chat/blocks/: inline-image-block.svelte  text-block.svelte
src/components/layouts/: chat.layout.svelte
src/components/layouts/elements/: character-card.svelte
src/components/layouts/parts/: character-multi-column.svelte
src/components/layouts/sidebar/: app-sidebar.svelte  nav-main.svelte  nav-user.svelte
src/components/parts/: app-sidebar.svelte  nav-experiences.svelte  nav-main.svelte  nav-user.svelte  sheet-template.svelte
src/components/settings/: engine-right-bar.svelte  llm-response.tab.svelte  llm.tab.svelte  model-provider.tab.svelte  persona-settings.svelte  sd-base.tab.svelte  sd-character.tab.svelte
src/components/settings/character/: character-image.tab.svelte  character-settings.tab.svelte  import-character.settings.svelte  new-character.settings.svelte
src/components/templates/: modal-template.svelte  sheet-template.svelte
src/components/templates/drawer/: drawer-wrapper.svelte  drawer.svelte  drawer.ts
src/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte
src/components/ui/card/: card-action.svelte  card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
src/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-title.svelte
src/lib/: global.ts
src/lib/actions/: ping-pong.ts
src/lib/components/: HelloWorld.svelte  Login.svelte  Main.svelte
src/lib/constants/: schemas.ts
src/lib/controllers/: auth.ts  character.ts  conversations.ts  db.ts  fs.ts  llm.ts  local-cache-storage.ts  sd.ts
src/lib/engine/: engine-character.ts  engine-conversation.ts  engine-dungeon.ts  engine-llm.ts  engine-persona.ts
src/lib/scripts/: commands.svelte.ts  utils.ts
src/lib/stores/: context.store.ts  engine-manager.store.ts  engine.ts  sd.store.ts  voice-over.store.ts
src/lib/types/: api.d.ts  app.d.ts  game.d.ts  global.d.ts  tavernv2.d.ts
src/lib/ui/: import-character.ts  interaction-box-menu.ts  toastr.ts
src/lib/utilities/: _api.ts  apiHelper.ts  error-manager.ts  image-utils.ts  lodash-wrapper.ts  readable-stream.ts  request-manager.ts  response-manager.ts  sd-utils.ts  utils.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/CRL/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
src/routes/login/: +page.server.ts  +page.svelte
static/comfyui-workflows/image/: CRL-FLUX.json  CRL-SDXL-wEcomID.json  CRL-SDXL.json
static/comfyui-workflows/interrogate/: CRL-INTERROGATE.json
(+153 files in other folders)
