[package]
name = "app"
version = "1.0.0"
description = ""
authors = [""]
license = "MIT"
repository = "popmarock/crl2"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
thiserror = "2.0.12"
wry = { version = "0.53.3", features = [] }
encoding_rs = "0.8.35"
#---------------
llama-cpp-sys-2 = { git = "https://github.com/utilityai/llama-cpp-rs.git", branch = "main" }
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs.git", branch = "main" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = { version = "1.47.1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
minijinja = { version = "2.11.0", features = ["builtins", "json", "loader"] }
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }
lazy_static = "1.5.0"
gbnf = "0.2.5"
chrono = "0.4.39"
regex = "1.11.1"
rand = "0.9.2"
