[package]
name = "app"
version = "1.0.0"
description = ""
authors = [""]
license = "MIT"
repository = "popmarock/crl2"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "alib"
# crate-type = ["staticlib", "cdylib", "rlib", "lib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
thiserror = "2.0.12"
wry = { version = "0.53.3", features = [] }
encoding_rs = "0.8.35"
#---------------
base64 = "0.22.1"
reqwest = { version = "0.12.23", features = ["json"] }
zip = "0.6.6"
tar = "0.4.40"
#---------------
tauri-plugin-fs = "2.2.1"
tauri-plugin-os = "2.2.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-process = "2.2.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-http = "2.4.3"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-deep-link = "2.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.2.3", features = ["deep-link"] }
#tauri-plugin-updater = "2.7.1"
